The button for the Expand-Collapse does fire correctly, now we need to use the CodeMirroir API.
test

--- a/app/styles/codemirror.less
+++ b/app/styles/codemirror.less
@@ -8,6 +8,16 @@
 	height: 100% !important;
 }
 
+.CodeMirror-gutter.steps {
+	width: 20px;
+}
+
+.steps  {
+	position: relative;
+	left: 3px;
+	font-weight: bold;
+}
+
 .CodeMirror {
 	tab-size: 3;
 }
